--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,10 @@ dependencies {
     // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Spring Security
-    // implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'io.jsonwebtoken:jjwt:0.12.3'
 
     // Swagger
     // implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
