--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.12.3'
 
     // Swagger
-    // implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
     // Logback
     // implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
