--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.slack.api:slack-api-client:1.45.0'
 
     // Redis
-    // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
