--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     implementation'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
@@ -57,6 +56,14 @@ dependencies {
 
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
+    // S3
+    implementation platform('software.amazon.awssdk:bom:2.25.16')
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:auth'
+
+    // 이미지 압축 & 리사이징 라이브러리
+    implementation 'net.coobird:thumbnailator:0.4.14'
 
     // Logback
     // implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
