--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ spring:
     import: optional:file:.env[.properties]
   application:
     name: cherrypick-backend
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 50MB
 
   datasource:
     url: ${DATASOURCE_URL}
@@ -55,5 +59,12 @@ spring:
 slack:
   webhook:
     url: ${SLACK_WEBHOOK_URL}
+
+aws:
+  s3:
+    region: ap-northeast-2
+    access-key: ${S3_ACCESS_KEY}
+    secret-key: ${S3_SECRET_KEY}
+    bucket: ${BUCKET_NAME}
 
 
