--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   data:
     redis:
-      host: localhost
+      host: redis-container
       port: 6379
       lettuce:
         pool:
