--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,10 @@ spring:
 
   jpa:
     properties:
-      show-sql: true # 배포 시 주석처리
+      #show-sql: true # 배포 시 주석처리
       hibernate:
         format_sql: true
-        use_sql_comments: true
+        #use_sql_comments: true
     hibernate:
       ddl-auto: update
 
@@ -35,7 +35,6 @@ spring:
 
   security:
     oauth2:
-
       client:
         registration:
           kakao:
