--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 50MB
+  profiles:
+    active: ${SPRING_PROFILE} # local, dev, prod
 
   datasource:
     url: ${DATASOURCE_URL}
