--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     // Logback
-    // implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
     // 크롤링
     // implementation 'org.jsoup:jsoup:1.15.4'
