--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   forward-headers-strategy: framework
   port: 8080
 
+version : v0.0.0
+
 spring:
   config:
     import: optional:file:.env[.properties]
