--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Copy config/ to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{secrets.SERVER_HOST }}
-          username: secrets.SERVER_USER
+          host: ${{secrets.DEV_SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "config"
           target: "~/repik"
@@ -51,12 +51,12 @@ jobs:
       - name: Deploy to EC2 Server
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.SERVER_HOST }}
+          host: ${{ secrets.DEV_SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd ~/repik
-            echo "${{ secrets.ENV }}" > ~/env.spring
+            echo "${{ secrets.DEV_ENV }}" > ~/env.spring
             docker compose down
             docker compose pull
             docker compose up
