--- a/repik/nginx/conf/spring.conf
+++ b/repik/nginx/conf/spring.conf
@@ -1,8 +1,14 @@
 server {
     listen 80;
-    server_name api.repik.kr;
+    server_name api.cherrypick.cloud;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         proxy_pass http://spring:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
