--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,6 @@ jobs:
             echo "${{ secrets.DEV_ENV }}" > .env
             docker compose down
             docker compose pull
-            docker compose up
+            docker compose up -d
 
 
