--- a/repik/docker-compose.yaml
+++ b/repik/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/www:/var/www/certbot
       - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - backend
