--- a/repik/nginx/conf/spring.conf
+++ b/repik/nginx/conf/spring.conf
@@ -1,22 +1,14 @@
 server {
     listen 80;
-    server_name api.cherrypick.cloud;
-    return 301 https://api.cherrypick.cloud;
-}
+    server_name api.repik.kr;
 
-server {
-    listen 443 ssl;
-    server_name api.cherrypick.cloud;
-
-   ssl_certificate /etc/letsencrypt/live/api.cherrypick.cloud/fullchain.pem;
-   ssl_certificate_key /etc/letsencrypt/live/api.cherrypick.cloud/privkey.pem;
-
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         proxy_pass http://spring:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
