Refactor: RP-113 OpenAI 스프링 라이브러리로 전환

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
     password: ${DATASOURCE_PASSWORD}
     driver-class-name: ${DATASOURCE_DRIVER_CLASS_NAME}
 
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
+      base-url: ${OPENAI_API_URL}
+
   jpa:
     properties:
       #show-sql: true # 배포 시 주석처리
@@ -75,10 +80,6 @@ spring:
 slack:
   webhook:
     url: ${SLACK_WEBHOOK_URL}
-
-openai:
-  api-key: ${OPENAI_API_KEY}
-  api-url: ${OPENAI_API_URL}
 
 aws:
   s3:
