--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+    }
 }
 
 dependencies {
@@ -79,8 +85,17 @@ dependencies {
     // Logback
     implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
-    // 크롤링
-    // implementation 'org.jsoup:jsoup:1.15.4'
+    // OpenAI
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
+    implementation 'org.springframework.ai:spring-ai-openai:1.0.0'
+
+}
+
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
+    }
 }
 
 tasks.named('test') {
