--- a/build.gradle
+++ b/build.gradle
@@ -86,17 +86,12 @@ dependencies {
     implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
     // OpenAI
-    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
-    implementation 'org.springframework.ai:spring-ai-openai:1.0.0'
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M2")
+    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M2"
 
 }
 
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
-    }
-}
 
 tasks.named('test') {
     useJUnitPlatform()
