--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     username: ${DATASOURCE_USERNAME}
     password: ${DATASOURCE_PASSWORD}
     driver-class-name: ${DATASOURCE_DRIVER_CLASS_NAME}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
 
   jpa:
     properties:
@@ -30,6 +33,7 @@ spring:
         #use_sql_comments: true
     hibernate:
       ddl-auto: update
+
 
   data:
     redis:
