--- a/repik/nginx/conf/spring.conf
+++ b/repik/nginx/conf/spring.conf
@@ -1,22 +1,28 @@
 server {
     listen 80;
     server_name api.repik.kr;
-    return 301 https://api.repik.kr;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://api.repik.kr;
+    }
 }
 
 server {
     listen 443 ssl;
     server_name api.repik.kr;
 
-   ssl_certificate /etc/letsencrypt/live/api.repik.kr/fullchain.pem;
-   ssl_certificate_key /etc/letsencrypt/live/api.repik.kr/privkey.pem;
-
+    ssl_certificate /etc/letsencrypt/live/api.repik.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.repik.kr/privkey.pem;
 
     location / {
-        proxy_pass http://spring:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_pass http://spring:8080;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
