--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,3 +86,6 @@ aws:
     access-key: ${S3_ACCESS_KEY}
     secret-key: ${S3_SECRET_KEY}
     bucket: ${BUCKET_NAME}
+
+linkprice:
+  affiliate-id: A100697697
