--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,9 @@ spring:
     openai:
       api-key: ${OPENAI_API_KEY}
       base-url: ${OPENAI_API_URL}
+    chat:
+      options:
+        model: gpt-3.5-turbo
 
   jpa:
     properties:
