--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,13 +25,9 @@ spring:
       maximum-pool-size: 10
       minimum-idle: 2
 
-  ai:
-    openai:
-      api-key: ${OPENAI_API_KEY}
-      base-url: ${OPENAI_API_URL}
-    chat:
-      options:
-        model: gpt-3.5-turbo
+openai:
+  api-key: ${OPENAI_API_KEY}
+  api-url: ${OPENAI_API_URL}
 
   jpa:
     properties:
