--- a/repik/nginx/conf/main.conf
+++ b/repik/nginx/conf/main.conf
@@ -18,6 +18,14 @@ server {
     ssl_certificate /etc/letsencrypt/live/api.cherrypick.cloud/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.cherrypick.cloud/privkey.pem;
 
+    location /api/toolbox {
+                proxy_pass http://fastapi:8000;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
                 proxy_pass http://spring:8080;
                 proxy_set_header Host $host;
