Chore: main 배포 파이프라인 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd repik
-            echo "${{ secrets.PROD_ENV }}" > .env
+            echo "${{ secrets.PROD_ENV }}" > spring.env
             docker compose down
             docker compose pull
             docker compose up -d
