--- a/repik/nginx/conf/spring.conf
+++ b/repik/nginx/conf/spring.conf
@@ -15,6 +15,8 @@ server {
     listen 443 ssl;
     server_name api.cherrypick.cloud;
 
+    client_max_body_size 50m;
+
     ssl_certificate /etc/letsencrypt/live/api.cherrypick.cloud/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.cherrypick.cloud/privkey.pem;
 
