--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
         #format_sql: true
         #use_sql_comments: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
 
 
   data:
