--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     // 유효성 검사
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    // MySQL
-    runtimeOnly 'com.mysql:mysql-connector-j'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -43,10 +40,6 @@ dependencies {
 
     // Slack
     implementation 'com.slack.api:slack-api-client:1.45.0'
-
-    // Redis
-    implementation'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -70,9 +63,7 @@ dependencies {
     implementation 'org.sejda.imageio:webp-imageio:0.1.6'
 
     // Crawler
-    implementation 'org.jsoup:jsoup:1.15.4'
     implementation "org.checkerframework:checker-qual:3.40.0"
-
 
     // 재컴파일 하지 않아도 즉시 적용
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -86,11 +77,23 @@ dependencies {
     // webClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    // MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     // QueryDSL
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
     annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    // Redis
+    implementation'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+    // Flyway
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
 
 }
 
