--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,11 +26,6 @@ spring:
       minimum-idle: 2
 
   jpa:
-    properties:
-      #show-sql: true # 배포 시 주석처리
-      hibernate:
-        #format_sql: true
-        #use_sql_comments: true
     hibernate:
       ddl-auto: none
 
@@ -44,6 +39,10 @@ spring:
           max-active: 10
           max-idle: 5
           min-idle: 1
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
 
   security:
     oauth2:
